# Coal-Miner

./: .gitmodules  CMakeLists.txt
Engine/: CMakeLists.txt
Engine/include/: coal_config.h  coal_helper.h  coal_image.h  coal_math.h  coal_miner.h  coal_miner_internal.h  config.h  dirent.h
Engine/src/: cmengine.c  cmextensions.c  cmgl.c  cmgl.h  cminput.c  cminput.h  cmplatform.h  cmrendering.c  cmrendering.h  cmtime.c  cmtime.h  cmwindow.c  cmwindow.h  coal_extensions.c  coal_gl.c  coal_gl.h  coal_helper.c  coal_image.c  coal_math.c  coal_miner.h  dirent.c  engine.c  engine.h  input.c  input.h  platform.h  rendering.c  rendering.h  window.c  window.h
Engine/src/extras/list/: list.c  list.h
Engine/src/extras/threadpool/: cm_threadpool.c  cm_threadpool.h
MainApp/res/shaders/: default.frag  default.vert  grid.frag  grid.vert  voxel_terrain.frag  voxel_terrain.vert
MainApp/src/: camera.c  camera.h  config.h  game.c  game.h  grid.c  grid.h  light.c  light.h  main.c  terrain.c  terrain.h
MainApp/src/terrainGeneration/: block_generator.c  terrain.c  terrain.h  terrainConfig.h  terrainStructs.h  terrain_blocks.c  terrain_blocks.h  terrain_meshing.c  terrain_meshing.h  terrain_noise.c  terrain_noise.h
